# Final_Project_Ma_Jinghan

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: fred_employment_info.doctree  modules.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: installation.rst.txt
docs/_build/html/_sources/source/: fred_employment_info.rst.txt  modules.rst.txt
docs/_build/html/source/: fred_employment_info.html  modules.html
fred_employment_info/: fred_employment_info.py
tests/: test_fred_employment_info.py
