[tool.poetry]
name = "fred_employment_info"
version = "0.1.0"
description = "It is a python package that can collect employment information from FRED API."
authors = ["JinghanMa98 <jm5223@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
